# duckdb_memory_test

./: .gitignore  base.py  docker-compose.yml  generate_parquet.py  heavy_query.py  light_query.py  makefile  pyproject.toml  queries.py  query_w.py
docker-entrypoint-initdb.d/: init.sql
