[tool.poetry]
package-mode=false
name = "ducktest"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
duckdb = "1.1.3"
pandas = "^2.2.3"
pyarrow = "^18.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
